--- a/UI Design/src/UI_Pages/AdminDasboard.form
+++ b/UI Design/src/UI_Pages/AdminDasboard.form
@@ -238,6 +238,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="ADD USER"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
